--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@ straightforward way to model this is with a graph, whose vertices correspond to
 agents and whose edges capture their pairwise interactions.  A vertex then
 chooses one of $k$ strategies, trying to anti-coordinate with all its neighbors
 simultaneously.  The payoff of a vertex is the sum of the payoffs of its games
-with its neighbors -- namely the number of neighbors with which it has
+with its neighbors---namely the number of neighbors with which it has
 successfully anti-coordinated.  It is easy to see that this model naturally
 captures many applications.  For example countries may choose commodities to
 produce, and their value will depend on how many trading partners do not
